--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,26 +84,25 @@
                 android:id="@+id/btn_category1"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:tag="cafe"
-                android:text="카페"
-                android:gravity="center"
-                android:background="@drawable/button_cafe"
-                android:textColor="@color/white"
-                android:fontFamily="@font/hanba"
-                android:textSize="0sp"
-                android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
                 android:layout_marginLeft="20dp"
+                android:background="@drawable/button_cafe"
                 android:clickable="true"
+                android:fontFamily="@font/hanba"
+                android:gravity="center"
                 android:onClick="category_menu"
-                />
+                android:tag="clothes"
+                android:text="패션의류/잡화"
+                android:textColor="@color/white"
+                android:textSize="0sp" />
 
             <TextView
                 android:id="@+id/btn_category2"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:text="편의점"
-                android:tag="convenient"
+                android:text="식품"
+                android:tag="foods"
                 android:gravity="center"
                 android:background="@drawable/button_convin"
                 android:textColor="@color/white"
@@ -119,8 +118,8 @@
                 android:id="@+id/btn_category3"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:tag="fastfood"
-                android:text="패스트푸드"
+                android:tag="digitals"
+                android:text="가전디지털"
                 android:gravity="center"
                 android:background="@drawable/button_fast"
                 android:textColor="@color/white"
@@ -137,8 +136,8 @@
                 android:id="@+id/btn_category4"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:tag="giftcard"
-                android:text="상품권"
+                android:tag="livings"
+                android:text="생활용품"
                 android:gravity="center"
                 android:background="@drawable/button_gift"
                 android:textColor="@color/white"
@@ -154,9 +153,9 @@
                 android:id="@+id/btn_category5"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:tag="movie"
+                android:tag="books"
                 android:gravity="center"
-                android:text="영화/공연"
+                android:text="도서/음반/DVD"
                 android:background="@drawable/button_movie"
                 android:textColor="@color/white"
                 android:fontFamily="@font/hanba"
@@ -172,9 +171,9 @@
                 android:id="@+id/btn_category6"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:tag="icecream"
+                android:tag="offices"
                 android:gravity="center"
-                android:text="아이스크림"
+                android:text="문구/오피스"
                 android:background="@drawable/button_ice"
                 android:textColor="@color/white"
                 android:fontFamily="@font/hanba"
