--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,7 @@
     <EditText
         android:layout_marginTop="30dp"
         android:id="@+id/et_email"
-        android:text="jongha@naver.com"
+        android:text="test1@naver.com"
         android:hint="input email"
         android:padding="2sp"
         android:background="#C51F25"
@@ -34,7 +34,7 @@
     <EditText
         android:id="@+id/et_pwd"
         android:hint="input pwd"
-        android:text="good1234"
+        android:text="tttttt"
         android:padding="2sp"
         android:background="#C51F25"
         android:inputType="textPassword"
