--- a/app/src/main/res/layout/activity_sell.xml
+++ b/app/src/main/res/layout/activity_sell.xml
@@ -7,108 +7,163 @@
     android:orientation="vertical"
     tools:context=".SellActivity">
 
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="상품 판매하기"
-        android:layout_marginTop="10sp"
-        android:fontFamily="@font/hanba"
-        android:textColor="@color/black"
-        android:textSize="30sp"
-        android:gravity="center"/>
+        android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/iv_gifticon"
-        android:layout_width="250sp"
-        android:layout_height="250sp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="30sp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="정가"
-        android:fontFamily="@font/hanba"
-        android:textColor="@color/black"
-        android:layout_marginLeft="20sp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="상품 판매하기"
+                android:layout_marginTop="10sp"
+                android:fontFamily="@font/hanba"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                android:gravity="center"/>
 
-    <TextView
-        android:id="@+id/tv_sell_price"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:text="정가"
-        android:fontFamily="@font/hanba"
-        android:textColor="@color/black"
-        android:layout_marginLeft="20sp"/>
+            <ImageView
+                android:id="@+id/iv_gifticon"
+                android:layout_width="250sp"
+                android:layout_height="250sp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="30sp"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="할인가"
-        android:fontFamily="@font/hanba"
-        android:textColor="@color/black"
-        android:layout_marginLeft="20sp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:text="상품명"
+                android:fontFamily="@font/hanba"
+                android:textColor="@color/black"
+                android:layout_marginLeft="20sp"/>
 
-    <EditText
-        android:id="@+id/tv_sell_discount"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:fontFamily="@font/hanba"
-        android:textColor="@color/black"
-        android:hint="판매할 가격을 입력해주세요"
-        android:layout_marginLeft="20sp"/>
+            <EditText
+                android:id="@+id/tv_sell_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:fontFamily="@font/hanba"
+                android:textColor="@color/black"
+                android:hint="상품 이름을 입력해주세요"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20sp"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="유통기한"
-        android:fontFamily="@font/hanba"
-        android:textColor="@color/black"
-        android:layout_marginLeft="20sp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:text="정가"
+                android:fontFamily="@font/hanba"
+                android:textColor="@color/black"
+                android:layout_marginLeft="20sp"/>
 
-    <TextView
-        android:id="@+id/tv_date_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="유통기한을 선택해주세요"
-        android:fontFamily="@font/hanba"
-        android:textColor="@color/black"
-        android:layout_marginLeft="20sp"/>
+            <EditText
+                android:id="@+id/tv_sell_price"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:fontFamily="@font/hanba"
+                android:textColor="@color/black"
+                android:hint="정가를 입력해주세요"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20sp"/>
 
-    <Button
-        android:id="@+id/tv_date_select"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="select_date"
-        android:background="@drawable/button_drawal"
-        android:layout_marginTop="10sp"
-        android:textColor="@color/white"
-        android:text="유통기한 선택하기"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:text="판매가"
+                android:fontFamily="@font/hanba"
+                android:textColor="@color/black"
+                android:layout_marginLeft="20sp"/>
 
-    <Button
-        android:id="@+id/tv_sell_picture"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="sell_pics"
-        android:background="@drawable/button_drawal"
-        android:layout_marginTop="10sp"
-        android:textColor="@color/white"
-        android:text="기프티콘 첨부하기"/>
+            <EditText
+                android:id="@+id/tv_sell_discount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:fontFamily="@font/hanba"
+                android:textColor="@color/black"
+                android:hint="판매할 가격을 입력해주세요"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20sp"/>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="판매하기"
-        android:background="@drawable/button_drawal"
-        android:textColor="@color/white"
-        android:layout_marginTop="10sp"
-        android:clickable="true"
-        android:onClick="sell_goods"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:text="상품설명"
+                android:fontFamily="@font/hanba"
+                android:textColor="@color/black"
+                android:layout_marginLeft="20sp"/>
 
+            <EditText
+                android:id="@+id/tv_sell_desc"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:textSize="20sp"
+                android:fontFamily="@font/hanba"
+                android:textColor="@color/black"
+                android:hint="상품 설명을 자세히 입력해주세요\nex) 사용한 기간 / 외관 / 성능"
+                android:layout_marginRight="20dp"
+                android:gravity="top"
+                android:singleLine="false"
+                android:layout_marginLeft="20sp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:text="판매기한"
+                android:fontFamily="@font/hanba"
+                android:textColor="@color/black"
+                android:layout_marginLeft="20sp"/>
+
+            <TextView
+                android:id="@+id/tv_date_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:text="판매기한을 선택해주세요"
+                android:fontFamily="@font/hanba"
+                android:textColor="@color/black"
+                android:layout_marginLeft="20sp"/>
+
+            <Button
+                android:id="@+id/tv_date_select"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="select_date"
+                android:background="@drawable/button_drawal"
+                android:layout_marginTop="10sp"
+                android:textColor="@color/white"
+                android:text="판매기한 선택하기"/>
+
+            <Button
+                android:id="@+id/tv_sell_picture"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="sell_pics"
+                android:background="@drawable/button_drawal"
+                android:layout_marginTop="10sp"
+                android:textColor="@color/white"
+                android:text="상품사진 첨부하기"/>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="판매하기"
+                android:background="@drawable/button_drawal"
+                android:textColor="@color/white"
+                android:layout_marginTop="10sp"
+                android:clickable="true"
+                android:onClick="sell_goods"/>
+
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
