--- a/app/src/main/res/layout/item_goods.xml
+++ b/app/src/main/res/layout/item_goods.xml
@@ -7,37 +7,61 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tv_discount"
-        android:gravity="center_vertical"
-        android:layout_width="50sp"
-        android:layout_height="50sp"
-        android:layout_weight="1"
-        android:fontFamily="@font/hanba"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:text="할인가"/>
-
-    <TextView
-        android:id="@+id/tv_price"
-        android:gravity="center_vertical"
-        android:layout_width="80sp"
-        android:layout_height="50sp"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_weight="2"
-        android:fontFamily="@font/hanba"
-        android:textSize="20sp"
-        android:textColor="#ff0000"
-        android:text="할인율"/>
+        android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/tv_goods_name"
+            android:gravity="center_vertical"
+            android:layout_width="200sp"
+            android:layout_height="30sp"
+            android:layout_weight="1"
+            android:fontFamily="@font/hanba"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:text="상품명"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tv_goods_discount"
+                android:gravity="center_vertical"
+                android:layout_width="100sp"
+                android:layout_height="30sp"
+                android:layout_weight="1"
+                android:fontFamily="@font/hanba"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:text="할인가"/>
+
+            <TextView
+                android:id="@+id/tv_goods_price"
+                android:gravity="center_vertical"
+                android:layout_width="80sp"
+                android:layout_height="50sp"
+                android:layout_weight="2"
+                android:fontFamily="@font/hanba"
+                android:textSize="15sp"
+                android:textColor="#ff0000"
+                android:text="할인율"/>
+        </LinearLayout>
+    </LinearLayout>
     <TextView
         android:id="@+id/tv_date"
-        android:gravity="center_vertical"
+        android:gravity="center"
         android:layout_width="20dp"
         android:layout_height="50sp"
         android:layout_weight="3"
         android:fontFamily="@font/hanba"
         android:textColor="@color/black"
         android:textSize="16sp"
-        android:text="유통기한"/>
+        android:text="유통기한"
+        android:layout_marginTop="30dp"/>
+
 
 </LinearLayout>
