--- a/app/src/main/res/layout/item_chatting.xml
+++ b/app/src/main/res/layout/item_chatting.xml
@@ -2,16 +2,16 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="10dp"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:background="#F4F4F4"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
+        android:id="@+id/tv_chatting_id"
         android:gravity="center_vertical"
-        android:layout_width="100sp"
-        android:layout_height="30sp"
-        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="25sp"
         android:fontFamily="@font/hanba"
         android:textColor="@color/black"
         android:textSize="15sp"
@@ -20,9 +20,8 @@
     <TextView
         android:id="@+id/tv_chatting_msg"
         android:gravity="center_vertical"
-        android:layout_width="100sp"
+        android:layout_width="match_parent"
         android:layout_height="30sp"
-        android:layout_weight="1"
         android:fontFamily="@font/hanba"
         android:textColor="@color/black"
         android:textSize="15sp"
@@ -31,11 +30,10 @@
     <TextView
         android:id="@+id/tv_chatting_time"
         android:gravity="center_vertical"
-        android:layout_width="100sp"
-        android:layout_height="30sp"
-        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="20sp"
         android:fontFamily="@font/hanba"
         android:textColor="@color/black"
-        android:textSize="15sp"
+        android:textSize="10sp"
         android:text="시간"/>
 </LinearLayout>
